# sms-spam-detection-nlp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-azure.yml  publish-container.yml
docs/: architecture.md  azure-oidc-setup.md  azure-operations.md  project_notes.md  publishing_checklist.md
docs/adr/: 0001-serve-the-existing-model-through-a-thin-api.md  0002-serve-react-demo-from-api-origin.md  0003-use-a-storage-free-azure-demo-runtime.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: run-tests.mjs
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css
infra/azure/: budget.bicep  cost-query.json  main.bicep  resource-group.bicep
outputs/: artifact_index.md  classification_report.md  confusion_matrix.csv  dataset_validation.json  error_examples.csv  frequent_words.md  model_metrics.json  ngram_findings.md  vocabulary_findings.md
scripts/: _common.ps1  _common.sh  analyze_text.ps1  analyze_text.sh  azure_audit.ps1  azure_audit.sh  azure_teardown.ps1  azure_teardown.sh  cluster_sms.ps1  cluster_sms.sh  download_dataset.ps1  download_dataset.sh  generate_outputs.ps1  generate_outputs.sh  model_sms.ps1  model_sms.sh  prepare_submission.ps1  run_pipeline.ps1  run_pipeline.sh  validate_dataset.ps1  validate_dataset.sh
tests/: test_api.py  test_azure_contract.py  test_data_validation.py  test_demo_model.py  test_end_to_end.py  test_prediction_cli.py
(+20 files in other folders)
