[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sms-spam-detection-nlp"
version = "0.1.0"
description = "End-to-end SMS spam detection NLP pipeline with semantic clustering."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Ermis Chorinopoulos" }]
keywords = ["nlp", "spam-detection", "scikit-learn", "text-classification"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pandas>=2.2,<2.4",
  "numpy>=1.26,<2.3",
  "scipy>=1.11,<1.17",
  "scikit-learn>=1.5,<1.8",
  "matplotlib>=3.8,<3.11",
  "seaborn>=0.13,<0.14",
  "joblib>=1.4,<2.0",
  "fastapi>=0.115,<0.140",
  "uvicorn>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "coverage>=7.6,<8.0",
  "httpx>=0.27,<1.0",
]

[project.urls]
Repository = "https://github.com/ErmisCho/sms-spam-detection-nlp"
Issues = "https://github.com/ErmisCho/sms-spam-detection-nlp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
required-version = ">=0.11,<0.12"
